# vsomeip_study

./: .gitmodules
vsomeip_client_example/: CMakeLists.txt
vsomeip_client_example/src/: vsomeip_client_example.cpp
vsomeip_service_example/: CMakeLists.txt
vsomeip_service_example/src/: vsomeip_service_example.cpp
